# ChangeLog for media-plugins/gst-plugins-dv
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-dv/ChangeLog,v 1.79 2011/07/25 18:07:11 xarthisius Exp $

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-dv-0.10.28.ebuild:
  ppc/ppc64 stable wrt #368281

  23 May 2011; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-dv-0.10.28.ebuild:
  Stable on amd64 wrt bug #368281

  23 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-dv-0.10.28.ebuild:
  x86 stable wrt bug #368281

*gst-plugins-dv-0.10.28 (20 Mar 2011)

  20 Mar 2011; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-dv-0.10.16.ebuild, -gst-plugins-dv-0.10.17.ebuild,
  -gst-plugins-dv-0.10.21.ebuild, -gst-plugins-dv-0.10.22.ebuild,
  +gst-plugins-dv-0.10.28.ebuild:
  Version bump. Parses SMTPE time codes. Remove old

  11 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-dv-0.10.23.ebuild:
  ppc/ppc64 stable wrt #346981

  30 Jan 2011; Jeroen Roovers <jer@gentoo.org> gst-plugins-dv-0.10.23.ebuild:
  Marked ~hppa (bug #352977).

  06 Jan 2011; Raúl Porcel <armin76@gentoo.org> gst-plugins-dv-0.10.23.ebuild:
  alpha stable wrt #346981

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-dv-0.10.23.ebuild:
  Stable on amd64 wrt bug #346981

  20 Dec 2010; Thomas Kahle <tomka@gentoo.org> gst-plugins-dv-0.10.23.ebuild:
  x86 stable per bug 346981

  11 Sep 2010; <nixnut@gentoo.org> gst-plugins-dv-0.10.22.ebuild:
  ppc stable #329703

  05 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-dv-0.10.22.ebuild:
  Stable on alpha, bug #329703

  05 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  gst-plugins-dv-0.10.22.ebuild:
  ppc64 stable wrt #324691

  01 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-dv-0.10.21.ebuild:
  Stable on alpha, bug #324691

*gst-plugins-dv-0.10.23 (31 Jul 2010)

  31 Jul 2010; Mart Raudsepp <leio@gentoo.org>