@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-dv
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-dv/ChangeLog,v 1.79 2011/07/25 18:07:11 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-dv/ChangeLog,v 1.80 2011/07/31 03:19:40 leio Exp $
+
+*gst-plugins-dv-0.10.30 (31 Jul 2011)
+
+  31 Jul 2011; Mart Raudsepp <leio@gentoo.org>
+  +gst-plugins-dv-0.10.30.ebuild:
+  Version bump. Assorted bug fixes
 
   25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gst-plugins-dv-0.10.28.ebuild:
